# i2c-rasp

./: README.md  config.example.toml  pyproject.toml
src/i2c_rasp/: __init__.py  alerting.py  buzzer.py  cli.py  config.py  display.py  metrics.py  render.py  scrape.py  snapshot.py
tests/: test_alerting.py  test_buzzer.py  test_cli_alert.py  test_config.py  test_display_scroll.py  test_metrics.py  test_render.py  test_snapshot.py
