[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "i2c-rasp"
version = "0.1.0"
description = "Monitor LCD I2C para equipamentos pfSense/Kontrol expostos via Prometheus node exporter."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "i2c-rasp maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.9",
]
lcd = [
  "RPLCD>=1.3",
  "smbus2>=0.5",
]

[project.scripts]
i2c-rasp = "i2c_rasp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/i2c_rasp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
